[ASSETIC DUMP] Added visibility colouring and icon showing who it's visible to. Fixed filtering not automatically applying on the default active tab.

--- a/Resources/public/css/bootstrap.css
+++ b/Resources/public/css/bootstrap.css
@@ -29,11 +29,3 @@
 .collection-item.panel-info .collapse-show-info {
 	display: inherit;
 }
-
-/* For footprints - todo: move me in to a separate file */
-#footprint-filter-header {
-	display: none;
-}
-#footprint-filter-header .badge {
-	color: #FFFFFF;
-}
